--- a/style.css
+++ b/style.css
@@ -61,3 +61,22 @@ p {
   right: 0;
   font-weight: 100;
 }
+
+.won-container {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 2, 60, 0.6);
+  z-index: 3;
+}
+
+.won-container #message {
+  position: relative;
+  width: 40%;
+  margin: 0 45%;
+  margin-top: 22%;
+  color: #d8d6d6;
+}
