--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,16 @@ p {
     }
   }
 }
-
+#settings {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-left: 20%;
+  padding-right: 20%;
+  background-color: #d8d6d6;
+}
 .ft-links,
 .ft-copyright {
   margin: 0;
