--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d8d6d6 !important;
+  background-color: #d8d6d6;
 }
 
 p {
@@ -7,11 +7,11 @@ p {
 }
 
 .base-gray {
-  background-color: #d8d6d6 !important;
+  background-color: #d8d6d6;
 }
 
 .base-dark-blue {
-  background-color: #00023c !important;
+  background-color: #00023c;
 }
 
 .red-darken {
@@ -47,7 +47,7 @@ p {
   height: 100%;
   opacity: 0;
   border: 1px #010310 outset;
-  background-color: #00023c !important;
+  background-color: #00023c;
   margin-top: 3%;
   padding-top: 1.5%;
   padding-bottom: 1.5%;
@@ -59,11 +59,16 @@ p {
 
 #myGame .row {
   margin: 0 auto;
+  flex-wrap: nowrap;
+  position: relative;
+  width: fit-content;
 }
 
 #myGame .myround {
-  width: 4rem !important;
-  height: 4rem;
+  position: relative;
+  content: "";
+  width: 3em !important;
+  height: 2em;
   padding: 0;
   transition: background 1s;
   cursor: pointer;
@@ -87,7 +92,7 @@ p {
   height: 100%;
   padding-left: 20%;
   padding-right: 20%;
-  background-color: #d8d6d6 !important;
+  background-color: #d8d6d6;
 }
 
 #settings .chose-color {
@@ -154,15 +159,32 @@ p {
   justify-content: space-between;
 }
 
+.player-container .play-player-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .player-container .player {
-  border: 3px solid #00023c !important;
+  border: 3px solid #00023c;
   padding-top: 5px;
-  color: #00023c !important;
+  color: #00023c;
 }
 
 .player-container .player.active {
   padding: 0;
-  background-color: #00023c !important;
+  background-color: #00023c;
   color: #d8d6d6;
-  border: 10px solid #00023c !important;
+  border: 10px solid #00023c;
+}
+
+.score {
+  position: relative;
+  padding: 20% 28%;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 600;
+  font-smoothing: antialiased;
+  display: inline-block;
+  background: #00023c;
+  color: #d8d6d6;
 }
